[gd_scene load_steps=3 format=3 uid="uid://high_score_entry_scene"]

[ext_resource type="Environment" path="res://environments/GalaxyEnvironment.tres" id="1_galaxy"]
[ext_resource type="Script" path="res://scripts/HighScoreEntry.gd" id="2_script"]

[node name="HighScoreEntry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(600, 400)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "üèÜ NEW HIGH SCORE! üèÜ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ScoreLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Your Score: 0"
horizontal_alignment = 1

[node name="PositionLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Rank: #1"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="NameLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Enter Your Name:"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "SPACE_PILOT"
max_length = 12
alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SubmitButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "SUBMIT"

[node name="Spacer" type="Control" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(20, 0)

[node name="SkipButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "SKIP"

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ButtonContainer/SubmitButton" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ButtonContainer/SkipButton" to="." method="_on_skip_pressed"]
